--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "yarn run lint",
+      "yarn run prettier",
       "prettier --write --ignore-unknown"
     ]
   },
