--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unielon-wallet-react",
-  "private": false,
+  "private": true,
   "version": "0.0.1",
   "type": "module",
   "author": "mars.saul",
