--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unielon-wallet-react",
+  "name": "@unielon/wallet-connect-react",
   "private": true,
   "version": "0.0.1",
   "type": "module",
