feat: add new remote & change packagename

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "version": "0.0.1",
   "type": "module",
-  "author": "saul <ninasaul@protonmail.com>",
+  "author": "saul0000 <ninasaul@protonmail.com>",
   "license": "MIT",
   "keywords": [
     "dogeuni",
