--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/dogeuni-org/dogeuni-wallet-react/issues"
   },
   "repository": {
-    "url": "https://github.com/dogeuni-org/dogeuni-wallet-react",
+    "url": "https://github.com/dogeuni-org/dogeuni-wallet-react.git",
     "type": "git"
   },
   "homepage": "https://dogeuni.com",
@@ -54,6 +54,9 @@
     "index.js",
     "README.md"
   ],
+  "publishConfig": {
+    "registry": "https://github.com/dogeuni-org/dogeuni-wallet-react.git"
+  },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
