--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "url": "https://github.com/dogeuni-org/dogeuni-wallet-react.git",
-    "type": "https"
+    "type": "git"
   },
   "homepage": "https://dogeuni.com",
   "description": "dogeuni wallet js sdk rom react provider、swap pools base action, base use for React",
